2004-04-16  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	* libgnomevfs/gnome-vfs-utils.c: (gnome_vfs_get_volume_free_space):
	Better statfs portability (#136468)

2004-04-16  Alexander Larsson  <alexl@redhat.com>

	Patch from Ondrej Sury
	
	* acconfig.h:
	* configure.in:
	* libgnomevfs/gnome-vfs-ssl.c: (gnome_vfs_ssl_create_from_fd),
	(gnome_vfs_ssl_destroy):
	Work with gnutls 1.0 and older versions.

2004-04-15 Joe Marcus Clarke <marcus@FreeBSD.org>

	* configure.in:
	Add check for the posix_openpt() function (similar to getpt).

	* modules/pty-open.c: (_gnome_vfs_pty_getpt)
	Try to use posix_openpt() to get our master pty.

	* modules/sftp-mthod.c:
	Define TEMP_FAILURE_RETRY if it is not already defined.  Note: this is a
	GNU'ism, and not very portable.  A better solution might need to be found.

2004-04-15  Alexander Larsson  <alexl@redhat.com>

	* programs/gnomevfs-info.c (main):
	Better error reporting

	* modules/sftp-method.c (sftp_connect):
	Handle ssh servers that ask "Password:" instead of "password:".

2004-04-15  Bastien Nocera  <hadess@hadess.net>

	* programs/.cvsignore:
	* programs/Makefile.am:
	* programs/gnomevfs-rm.c: add a test for unlink (Closes: #135796)

2004-04-09  Guntupalli Karunakar  <karunakar@freedomink.org>

        * configure.in: Added "gu" (Gujarati) to ALL_LINGUAS.

2004-04-01  Alexander Larsson  <alexl@redhat.com>

	Partially based on patch from Christian Kellner
	
	* doc/tmpl/gnome-vfs-socket-buffer.sgml:
	* doc/tmpl/gnome-vfs-socket.sgml:
	* doc/tmpl/gnome-vfs-ssl.sgml:
	Docs updates.
	
	* libgnomevfs/gnome-vfs-socket.h:
	* libgnomevfs/gnome-vfs-socket.c: (gnome_vfs_socket_write),
	(gnome_vfs_socket_close), (gnome_vfs_socket_read):
	Make sockets have cancellable arguments.
	
	* libgnomevfs/gnome-vfs-inet-connection.c:
	(gnome_vfs_inet_connection_create),
	(gnome_vfs_inet_connection_close),
	(gnome_vfs_inet_connection_read),
	(gnome_vfs_inet_connection_write):
	Make fd non-blocking, implement cancelability
	