@@ -365,7 +365,7 @@ AC_SUBST(LIBEFS_CFLAGS)
 dnl
 dnl ftp-method.c
 dnl
-AC_DEFUN(AC_STRUCT_LINGER, [
+AC_DEFUN([AC_STRUCT_LINGER], [
 av_struct_linger=no
 AC_MSG_CHECKING(struct linger is available)
 AC_TRY_RUN([
